test/tests/operators/select/error_invalid_selector.txt
error: expected selector
 --> tests/operators/select/error_invalid_selector.tql:6:8
  |
6 | select 1
  |        ^ 
  |
